# docs/swagger.json
@@ -4,6 +4,50 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/files": {
+            "get": {
+                "description": "Show filename and last modified time in a directory",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "v1-GET"
+                ],
+                "summary": "List files in directory",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Directory path",
+                        "name": "path",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/service.FileInfo"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/generate": {
             "post": {
                 "description": "Generate string from input params",
@@ -14,7 +58,7 @@
                     "text/plain"
                 ],
                 "tags": [
-                    "v1"
+                    "v1-POST"
                 ],
                 "summary": "Generate String",
                 "parameters": [
@@ -45,7 +89,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v1"
+                    "v1-GET"
                 ],
                 "summary": "Say Hello (V1)",
                 "responses": {
@@ -71,7 +115,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v1"
+                    "v1-POST"
                 ],
                 "summary": "Generate QR Code",
                 "parameters": [
@@ -161,6 +205,17 @@
                     "type": "string"
                 },
                 "qr": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.FileInfo": {
+            "type": "object",
+            "properties": {
+                "mod_time": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
